syntax = "proto3";

package rps;

option go_package = "./rps";

service GameService {
    rpc createGame(CreateGameRequest) returns (NewGameResponse) {}
    rpc joinGame(JoinGameRequest) returns (GameResponse) {}
    rpc getGames(void) returns (GamesResponse) {}
}

message Player {
    string name = 1;
    string choice = 2;
}

message void {

}

message Game {
    string id = 1;
    string playerA = 2;
	string playerB = 3;
	string choiceA = 4;
	string choiceB = 5;
	int32 WinsA = 6;
	int32 WinsB = 7;
	bool GameFinished = 8;
	string CurrentWinner = 9;
}

message GetGameRequest {
    string id = 1;
}

message CreateGameRequest {
    Player player = 1;
}

message JoinGameRequest {
    Player player = 2;
    string gameId = 1;
}

message GameResponse {
    Game game = 1;
}

message GamesResponse {
    repeated Game game = 1;
}

message NewGameResponse {
    Game game = 1;
}